--- a/index.html
+++ b/index.html
@@ -16,34 +16,196 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="container">
-      <header class="col-12 col-sm-12">
-        <div class="row">
-          <nav class="navbar">
-            <div class="col-12 col-sm-12">
-              <div class="navbar-brand col-sm-4">
-                Sania J. Photography
-              </div>
-              <div
-                style="float: right;"
-                class="navbar-nav navbar-text col-sm-8"
-              >
-                <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About Me</a></li>
-                  <li><a href="#">Contact</a></li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+    <!-- starting the navbar -->
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top" id="navbar">
+      <div class="container">
+        <!-- navbar brand -->
+        <a href="#" class="navbar-brand">Sania</a>
+        <!-- navbar links -->
+        <ul class="navbar-nav top-center-list nav-list">
+          <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="aboutme.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+        <!-- navbar social links -->
+        <ul class="navbar-nav ml-auto nav-list">
+          <li class="nav-item">
+            <a class="nav-link fa fa-facebook" href=""></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fa fa-instagram" href=""></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fa fa-twitter" href=""></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fa fa-pinterest" href=""></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- navbar ends -->
+    <!-- carousel starts -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- carousel indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <!-- carousel body -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="/images/22.jpg" alt="First slide" />
+          <!-- carousel content -->
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Slider One Item</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequuntur, odio? Harum dolorem, qui expedita quidem debitis
+              est, facere, tempore voluptatem cupiditate aliquam fugiat eum
+              molestias doloremque explicabo. Voluptates, aliquid quasi?
+            </p>
+          </div>
         </div>
-      </header>
-      <div></div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="/images/11.jpg" alt="Second slide" />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Slider Two Item</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequuntur, odio? Harum dolorem, qui expedita quidem debitis
+              est, facere, tempore voluptatem cupiditate aliquam fugiat eum
+              molestias doloremque explicabo. Voluptates, aliquid quasi?
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="/images/34.jpg" alt="Third slide" />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Slider Three Item</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequuntur, odio? Harum dolorem, qui expedita quidem debitis
+              est, facere, tempore voluptatem cupiditate aliquam fugiat eum
+              molestias doloremque explicabo. Voluptates, aliquid quasi?
+            </p>
+          </div>
+        </div>
+        <!-- carousel content ends -->
+      </div>
+      <a
+        class="carousel-control-prev"
+        href="#myCarousel"
+        role="button"
+        data-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#myCarousel"
+        role="button"
+        data-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-
+    <!-- carousel ends -->
+    <!-- Main Body -->
+    <div class="container">
+      <div class="row row-content">
+        <div class="row col-12 connect">
+          <div class="col-3 img">
+            <div>Who Am I</div>
+          </div>
+          <div class="col-3 img">
+            <div>Instagram</div>
+          </div>
+          <div class="col-3 img">
+            <div>Get In Touch</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Main Body Ends -->
+    <!-- Footer -->
+    <div class="jumbotron mx-auto footer-section">
+      <div class="row">
+        <p class="mx-auto">Find me on Instagram</p>
+      </div>
+      <div class="row">
+        <div class="mx-auto">
+          <h1 class="fa fa-instagram fa-lg"></h1>
+          <a href="#">Sania J. Photography</a>
+        </div>
+      </div>
+    </div>
+    <!-- images section start -->
+    <div class="row sliding-images mx-auto">
+      <img src="/images/slider-images/1.jpg" alt="" />
+      <img src="/images/slider-images/2.jpg" alt="" />
+      <img src="/images/slider-images/3.jpg" alt="" />
+      <img src="/images/slider-images/4.jpg" alt="" />
+      <img src="/images/slider-images/5.jpg" alt="" />
+      <img src="/images/slider-images/6.jpg" alt="" />
+      <img src="/images/slider-images/7.jpg" alt="" />
+      <img src="/images/slider-images/8.jpg" alt="" />
+    </div>
+    <!-- images section end -->
+    <!-- footer section starts -->
+    <footer class="footer-area row">
+      <div class="footer-logo row align-items-center">
+        <h1 class="col-sm">Sania</h1>
+      </div>
+      <div class="footer-copy row align-items-center">
+        <div class="copyright col-sm">
+          (C) 2019 - Saina J. Photography All Rights Reserved.
+        </div>
+        <div class="footer-links col-sm">
+          <ul>
+            <li><a href="">contact</a></li>
+            <span>/</span>
+            <li><a href="">privacy</a></li>
+            <span>/</span>
+            <li><a href="">terms</a></li>
+            <span>/</span>
+            <li><a href="">about</a></li>
+          </ul>
+        </div>
+        <div class="footer-social col-sm">
+          <ul>
+            <li><a class="fa fa-facebook" href=""></a></li>
+            <li><a class="fa fa-instagram" href=""></a></li>
+            <li><a class="fa fa-twitter" href=""></a></li>
+            <li><a class="fa fa-pinterest" href=""></a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer Ends -->
     <!-- Javascript Files -->
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/node_modules/popper.js/dist/popper.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $(window).scroll(function () {
+          var scroll = $(window).scrollTop();
+          if (scroll > 100) {
+            $("#navbar").addClass("bg-dark");
+          }
+          if (scroll < 100) {
+            $("#navbar").removeClass("bg-dark");
+          }
+        });
+      });
+    </script>
   </body>
 </html>
